Add colorbox integration and fix lightbox

--- a/modules/contrib/paragraphs_bundles/css/paragraphs-bundles-basic.css
+++ b/modules/contrib/paragraphs_bundles/css/paragraphs-bundles-basic.css
@@ -53,6 +53,8 @@
   --pb-br-h: initial;
   --pb-tx: initial;
   --pb-tx-h: initial;
+  --pb-width: initial;
+  --pb-bt-a: initial;
   --pb-text-align-start: left;
   --pb-text-align-end: right;
 }
