--- a/themes/contrib/solo/css/base/solo-animation.css
+++ b/themes/contrib/solo/css/base/solo-animation.css
@@ -96,7 +96,7 @@
 .solo-ul,
 .field ul,
 .pager ul) li>button:hover::before {
-  animation: btnBorderAnimation 0.5s linear forwards;
+  animation: btnBorderAnimation 0.5s ease-out forwards;
 }
 
 a,
@@ -110,7 +110,7 @@ input.button {
 }
 
 .page-wrapper form input.button.form-submit:hover {
-  animation: wiggle 0.3s;
+  animation: wiggle 0.6s ease-out both;
 }
 
 .solo-animate-opacity,
@@ -133,7 +133,7 @@ input.button {
 .solo-animate-top {
   position: relative;
   animation: animatetop 0.6s;
-  animation-timing-function: cubic-bezier(0.1, 0.9, 1, 0.1);
+  animation-timing-function: var(--solo-ease-in-out);
 }
 
 @keyframes animatetop {
@@ -152,7 +152,7 @@ input.button {
 .solo-animate-left {
   position: relative;
   animation: animateleft 0.6s;
-  animation-timing-function: cubic-bezier(0.1, 0.9, 1, 0.1);
+  animation-timing-function: var(--solo-ease-in-out);
 }
 
 @keyframes animateleft {
@@ -171,7 +171,7 @@ input.button {
 .solo-animate-right {
   position: relative;
   animation: animateright 0.6s;
-  animation-timing-function: cubic-bezier(0.1, 0.9, 1, 0.1);
+  animation-timing-function: var(--solo-ease-in-out);
 }
 
 @keyframes animateright {
@@ -190,7 +190,7 @@ input.button {
 .solo-animate-bottom {
   position: relative;
   animation: animatebottom 0.6s;
-  animation-timing-function: cubic-bezier(0.1, 0.9, 1, 0.1);
+  animation-timing-function: var(--solo-ease-in-out);
 }
 
 @keyframes animatebottom {
@@ -208,7 +208,7 @@ input.button {
 
 .solo-animate-zoom {
   animation: animatezoom 0.6s;
-  animation-timing-function: cubic-bezier(0.1, 0.5, 1, 0.1);
+  animation-timing-function: var(--solo-ease-in-out);
 }
 
 @keyframes animatezoom {
@@ -232,36 +232,35 @@ input.button {
 
 @keyframes wiggle {
   0%,
-  7%,
   100% {
-    transform: rotateZ(0) scale(1);
+    transform: rotateZ(0deg) scale(1);
   }
 
   15% {
-    transform: rotateZ(-8deg) scale(1.03);
-  }
-
-  20% {
-    transform: rotateZ(6deg) scale(0.97);
-  }
-
-  25% {
-    transform: rotateZ(-6deg) scale(1.03);
+    transform: rotateZ(-2.5deg) scale(1.01);
   }
 
   30% {
-    transform: rotateZ(4deg) scale(0.97);
+    transform: rotateZ(2deg) scale(0.99);
   }
 
-  35% {
-    transform: rotateZ(-2deg) scale(1.03);
+  45% {
+    transform: rotateZ(-1.5deg) scale(1.005);
   }
 
-  40% {
-    transform: rotateZ(0) scale(1);
+  60% {
+    transform: rotateZ(1deg) scale(0.995);
   }
 
+  75% {
+    transform: rotateZ(-0.5deg) scale(1.0025);
+  }
+
+  90% {
+    transform: rotateZ(0.25deg) scale(1);
+  }
 }
+
 
 .dis-anim-submit form input.button.form-submit:hover {
   animation: none !important;
