--- a/themes/contrib/solo/css/components/solo-fixed-search-block.css
+++ b/themes/contrib/solo/css/components/solo-fixed-search-block.css
@@ -7,7 +7,7 @@
   inset-block-start: 0;
   inset-inline-start: 0;
   overflow-y: hidden;
-  transition: 0.5s;
+  transition: height 400ms cubic-bezier(0.25, 1, 0.5, 1);
   background-color: var(--r-bg);
 }
 
