--- a/themes/contrib/solo/css/components/solo-system-tabs.css
+++ b/themes/contrib/solo/css/components/solo-system-tabs.css
@@ -47,6 +47,7 @@ ul.primary > li > a {
   border-start-end-radius: var(--solo-px8);
   border-end-end-radius: 0;
   border-end-start-radius: 0;
+  line-height: 1.4;
 }
 
 ul.primary > li:last-child > a {
@@ -57,6 +58,7 @@ ul.secondary > li > a {
   padding-block: var(--solo-px4);
   padding-inline: var(--solo-px12);
   display: block;
+  line-height: 1.3;
 }
 
 ul.primary > li > a,
