--- a/themes/contrib/solo/css/theme/solo-clickable-image.css
+++ b/themes/contrib/solo/css/theme/solo-clickable-image.css
@@ -26,6 +26,7 @@ a.img--is-clickable > picture > img.solo-image {
 .image-auto a.img--is-clickable > img.solo-image,
 .image-auto a.img--is-clickable > picture > img.solo-image {
   width: auto !important;
+  float: none;
 }
 
 a.img--is-clickable:hover > img.solo-image,
